fixed responisve on iphone 5/SE

--- a/grid.css
+++ b/grid.css
@@ -61,7 +61,7 @@ h1 {
     word-wrap: break-word;
     display: block;
     font-family: 'Cabin', helvetica, arial, sans-serif;
-    font-size: 40px;
+    font-size: 24px;
     font-weight: 400;
     padding: 0 0px;
     text-shadow: 0 -1px 0 #000;
