--- a/main.css
+++ b/main.css
@@ -1,7 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Cabin:400);
 
 body {
-	width: 1000px;
 	background-image: url("img/background.jpg");
 	background-repeat: no-repeat;
     background-attachment: fixed;
